# PicoCASH-REGISTER

./: CMakeLists.txt  LCD.c  README.md  RFID.c  RFID.h  RFID.py  keyboard.c  main.c  main.h  memoria.c  memoria.h  receptor.c  receptor.h  salesMgent.c  userValidation.c
DOXY/html/: _l_c_d_8c.html  doxygen.css  files.html  globals.html  globals_func.html  globals_vars.html  index.html  keyboard_8c.html  main_8c.html  md__r_e_a_d_m_e.html  memoria_8c.html  menudata.js  pages.html  receptor_8c.html  sales_mgent_8c.html  user_validation_8c.html
DOXY/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+4 more)
hin/: Data.h  LCD.h  keyboard.h  main.h  memoria.h  receptor.h  salesMgent.h  userValidation.h
src/: main.py
